--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,6 +1,6 @@
 .computer {
-  width: 30vw;
-  max-width: 575px;
+  min-width: 30vw;
+  max-width: 300px;
   &:hover {
     filter: drop-shadow(0px 0px 20px rgb(165, 252, 246));
   }
@@ -19,10 +19,14 @@
   color: white;
   font-size: 2rem;
   margin: 0;
+  @media (max-width: 1023px) {
+    font-size: 1rem;
+  }
 }
 
 .comments {
-  padding: 16px;
+  padding: 8px;
+  padding-top: 0;
 }
 
 .v7domain {
@@ -31,4 +35,7 @@
   font-size: 5rem;
   text-align: center;
   margin: 0;
+  @media (max-width: 1023px) {
+    font-size: 4.5rem;
+  }
 }
