--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -4,6 +4,34 @@ nav {
   background-color: rgb(34, 34, 34);
   width: 100%;
 
+  .hamburger-div {
+    display: flex;
+    height: 128px;
+    width: 100%;
+    margin-bottom: -128px;
+    //flex-direction: row-reverse;
+    align-items: center;
+  }
+
+  .hamburger-icon {
+    display: none;
+    @media (max-width: 645px) {
+      color: white;
+      font-size: 40px;
+      display: block;
+      align-items: right;
+      margin-left: 128px;
+      border: 1px solid black;
+      background-color: rgb(25, 25, 25);
+      padding: 6.4px 10px;
+
+      &:hover {
+        color: black;
+        background-color: rgb(184, 194, 248);
+      }
+    }
+  }
+
   .nav-btn {
     a {
       color: white;
@@ -18,6 +46,10 @@ nav {
       &:hover {
         color: black;
         background-color: rgb(184, 194, 248);
+      }
+
+      @media (max-width: 645px) {
+        display: none;
       }
     }
   }
@@ -41,7 +73,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 8px;
+    margin-left: 16px;
     transition: transform 2s ease-in-out;
 
     &:hover {
@@ -51,6 +83,28 @@ nav {
 
     img {
       height: 54.4px;
+    }
+  }
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 91px;
+  left: 128px;
+  background-color: rgb(60, 60, 60);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(124, 124, 124, 0.2);
+  z-index: 1;
+  border: 1px solid black;
+
+  a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    &:hover {
+      background-color: rgb(70, 70, 70);
     }
   }
 }
